# ipc-examples

./: README.md
.github/workflows/: csharp.yml  dotnet-desktop.yml  go.yml  python.yml  ts.yml
proc1/: Program.cs  proc1.csproj
proc2/: go.mod  go.sum  main.go  test_input.txt
proc3/: index.ts  package-lock.json  package.json  test_input.txt
proc4/: main.py  pyproject.toml
