[tool.poetry]
name = "proc4"
version = "0.1.0"
description = ""
authors = ["nturley <neil@copia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ddtrace = "^2.10.4"
python-json-logger = "^2.0.7"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
